# CS223_Apr18__08

./: Presentation.pptx  README.md  Readme.txt  SRS.docx  Test Report.docx
cfg/: cfg.txt
code/: BTechGenObcStud.cpp  BTechGenObcStud.h  BTechSCST.cpp  BTechSCST.h  CMakeLists.txt  CMakeLists.txt~  ChangePassword.cpp  ChangePassword.h  MscGenObc.cpp  MscGenObc.h  MscScSt.cpp  MscScSt.h  PayMessFee.cpp  PayMessFee.h  RegisterStudent.cpp  RegisterStudent.h  RemoveStudent.cpp  RemoveStudent.h  SeeReceipt.cpp  SeeReceipt.h  SemesterFee.cpp  SemesterFee.h  Student.cpp  Student.h  UpdateDetails.cpp  UpdateDetails.h  ViewDetails.cpp  ViewDetails.h  adminHomePage.cpp  adminHomePage.h  logInPage.cpp  logInPage.h  main.cpp  mainPage.cpp  mainPage.h  nik.txt  softwareproject.cbp  softwareproject.depend  softwareproject.layout  studentHomePage.cpp  (+1 more)
data/: bhadwa.txt
